--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,20 @@ body {
   }
 } */
 
+
+
+
+
+
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
